@@ -14,6 +14,7 @@ Bugs fixed:
 - 1983569 enumerate qualifier call causes qualifier provider to die
 - 1991296 httpAdapter doesn't check content_length correctly
 - 1934753 indCIMXMLExport.c fails to compile on gcc 4.3
+- 1993385 sfcb restarts itself on startup
 
 Changes in 1.3.1
 ================
